style: fix spacing on homepage for mobile

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -52,7 +52,9 @@ h1 {
 
 @media (max-width: 725px) {
 	.home-block {
+		margin-top: 3rem;
 		flex-direction: column;
-		justify-content: center;
+		justify-content: flex-start;
+		row-gap: 3rem;
 	}
 }
